--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
   <ul>
     <li><a href="./01-hello/index.html">01 Hello</a></li>
     <li><a href="./02-div-bar/index.html">02 Div bar</a></li>
+    <li><a href="./02-svg-bar/index.html">03 Svg bar</a></li>
 
   </ul>
 
