svg bar chart updating data

--- a/src/02-svg-bar/index.html
+++ b/src/02-svg-bar/index.html
@@ -7,6 +7,13 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+  <h1><span id="chart">Average</span> distance from the Sun</h1>
+  <svg class="bar-chart"></svg>
+  <form>
+    <button type="button" id="avg">Average</button>
+    <button type="button" id="max">Maximum</button>
+    <button type="button" id="min">Minimum</button>
+  </form>
   <script src="./index.js"></script>
 </body>
 </html>
